--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ a:hover {
     padding: 0.5%;
     margin: 5% 1% 1% 1%;
     text-align: center;
-    font-size: 1.5vw;
+    font-size: 130%;
 }
 
 .buttonRes {
