--- a/style.css
+++ b/style.css
@@ -5,14 +5,14 @@ body {
 h1 {
     color: rgb(226, 4, 255);
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 4vw;
+    font-size: 400%;
     text-align: center;
 }
 
 h5 {
     color: rgb(88, 22, 97);
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 1vw;
+    font-size: 100%;
     text-align: center;
 }
 
@@ -29,8 +29,8 @@ a:hover {
 
 .fon {
     margin: auto;
-    width: 90vw;
-    height: 100vh;
+    width: 1400px;
+    height: 1500px;
     background-color: rgb(133, 219, 215);
     padding-bottom: 4%;
     padding-top: 2%
