--- a/style.css
+++ b/style.css
@@ -6,16 +6,25 @@ h1 {
     color: rgb(226, 4, 255);
     font-family: Arial, Helvetica, sans-serif;
     font-size: 400%;
+    justify-content: center;
+    align-items: center;
     text-align: center;
+    margin: 0 auto;
+    position: relative;
+    max-width: 100%;
 }
 
 h5 {
     color: rgb(88, 22, 97);
     font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
+    justify-content: center;
+    align-items: center;
     text-align: center;
+    /*margin: 0 auto;*/
+    position: relative;
+    max-width: 100%;
 }
-
 a:link {
     color: blue;
 }
