--- a/style.css
+++ b/style.css
@@ -6,25 +6,31 @@ h1 {
     color: rgb(226, 4, 255);
     font-family: Arial, Helvetica, sans-serif;
     font-size: 400%;
+    /*padding: 0 23% 0 23%;*/
+    margin: 0 20% 0 20%;
+    width: 60%;
+
+    text-align: center;
+    /*
     justify-content: center;
     align-items: center;
     text-align: center;
     margin: 0 auto;
     position: relative;
-    max-width: 100%;
+    max-width: 100%;*/
 }
 
 h5 {
     color: rgb(88, 22, 97);
     font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    /*margin: 0 auto;*/
-    position: relative;
-    max-width: 100%;
+    margin: 0 40% 0 40%;
+    width: 25%;
+    margin: auto;
+    margin-bottom: 2%;
+    margin-top: 1%;
 }
+
 a:link {
     color: blue;
 }
